--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "dropitlikeishot",
-  "private": true,
+  "name": "drop-it-like-is-hot",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "tsc": "tsc",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -12,25 +13,67 @@
     "format": "prettier --write src//**/*.{ts,tsx,css} --config ./.prettierrc",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.2",
+    "path": "^0.12.7",
     "prettier": "^2.8.0",
-    "react-hooks": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
-  }
+    "vite": "^3.2.3",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-plugin-linter": "^1.2.0",
+    "vite-tsconfig-paths": "^3.6.0"
+  },
+  "peerDependencies": {
+    "react": "16.8.0 || >=17.x",
+    "react-dom": "16.8.0 || >=17.x"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "npm run eslint",
+      "npm run format"
+    ]
+  },
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/drop-it-like-is-hot.es.js",
+      "require": "./dist/drop-it-like-is-hot.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
+  "main": "./dist/drop-it-like-is-hot.umd.js",
+  "module": "./dist/drop-it-like-is-hot.es.js",
+  "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/StefanRadusi/drop-it-like-is-hot"
+  },
+  "keywords": [],
+  "author": "Stefan Radusi",
+  "bugs": {
+    "url": "https://github.com/bigyanpoudel/drop-it-like-is-hot/issues"
+  },
+  "homepage": "https://github.com/bigyanpoudel/drop-it-like-is-hot#readme",
+  "license": "MIT"
 }
