fix type generation

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "vite-tsconfig-paths": "^3.6.0"
   },
   "peerDependencies": {
-    "react": "16.8.0 || >=17.x",
-    "react-dom": "16.8.0 || >=17.x"
+    "react": "18.x",
+    "react-dom": "18.x"
   },
   "husky": {
     "hooks": {
